date/parse_duration.rl
// Code generated by Ragel. DO NOT EDIT.

package date

%%{
    machine duration;

    action num {
        n *= 10
        n += int(data[p]-'0')
    }

    y = digit{1,3} $num 'y' @{y, n = n, 0};
    m = digit{1,4} $num 'm' @{m, n = n, 0};
    d = digit{1,5} $num 'd' @{d, n = n, 0};

    main := y? m? d?;
}%%

func parseDuration(data []byte) (y, m, d int, ok bool) {
    n, cs, p, pe := 0, 0, 0, len(data)
    %%{
        write data;
        write init;
        write exec;
    }%%
    ok = cs >= duration_first_final
    return
}
